--- a/Code/Tweets_emotions.ipynb
+++ b/Code/Tweets_emotions.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tweepy"
+    "import tweepy\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -15,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "auth = tweepy.AppAuthHandler('7LAdt5hpLhHgqTLbjxq6OUew1', 'cbBkuL4lzRiG2GH5mK5WF4gr4prxYQnZDHHMLum63jACSgdRI0')\n",
+    "auth = tweepy.AppAuthHandler('EMmGcc8Is1eFkeQknQu9BQC0T', 'uTEU1RrYNl1k2gFomRVaP8AuTuTIAgoypX3Fn2WKxKQYTDOIoW')\n",
     "api = tweepy.API(auth)"
    ]
   },
@@ -25,57 +26,153 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "places = api.search_geo(query=\"Colombia\", granularity=\"country\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "places = api.search_geo(query=\"Colombia\", granularity=\"country\")\n",
     "place_id = places[0].id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "@reporteroanimal @COLSinToreo @monterialcaldia @FicoGutierrez @andreanimalidad @GabrielChica Vayan viendo esas camp… https://t.co/B9DYnW5g4P | Chocontá\n",
-      "Soy la parceraxd https://t.co/o1OaecBzmv | Bogotá, D.C.\n",
-      "Solo se feliz linda. 🖤 | Bogotá, D.C.\n",
-      "Ps si, por qué deberíamos creerle a gente que han demostrado que no saben votar? 🤔 https://t.co/otjMZYBVzM | Envigado\n",
-      "#NoMasPostobon #LoDeQuinteroEs #SantaFe #millonarios #Bucaramanga https://t.co/31DVESu4qk | Cúcuta\n",
-      "@meninblack43 🌛🌸 | Bogotá, D.C.\n",
-      "https://t.co/VpgGW2qfXC | Timbío\n",
-      "En América del Norte el hockey es una locura, una pasión. Afortunadamente aprendí a apreciarlo y a disfrutarlo! Y p… https://t.co/bvnSX4rd4E | Bogotá, D.C.\n",
-      "@AnaBejaranoRG Su empeño era recuperar a toda costa lo que habían perdido en democracia… confiamos en la justicia,… https://t.co/HxQuk5dqAj | Medellín\n",
-      "Ya que deje de robar Julio, ¿no? https://t.co/0pSh45lqsb | Bogotá, D.C.\n",
-      "@StephBatesPress 💩💩😡🐀 | Medellín\n",
-      "@KokeContreras9 🌛🌸 | Bogotá, D.C.\n",
-      "Y sin saberlo estuve a pocos metros de un magnicidio, muy denso | Bogotá, D.C.\n",
-      "⚡️ https://t.co/nAVHzuiUDf | La Tebaida\n",
-      "Entonces , según usted tenemos que elegir otro inepto, sin perfil de nada para salvar a Colombia? Vote por Fajardo… https://t.co/UQVXyQk2sq | Fusagasugá\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tweets = api.search_tweets(q=\"place:%s\" % place_id)\n",
-    "for tweet in tweets:\n",
-    "    print(tweet.text + \" | \" + tweet.place.name if tweet.place else \"Undefined place\")"
+    "def get_tweets(emotion, words_list, number_tweets):\n",
+    "    emotion_words = '(' +' OR '.join(words) + ')'\n",
+    "    searched_tweets = [status.text for status in tweepy.Cursor(api.search_tweets, q= emotion_words + (\" place:%s\" % place_id) ).items(number_tweets)]\n",
+    "    tweets_df = pd.DataFrame(searched_tweets, columns = ['text'])\n",
+    "    tweets_df['emotion']= emotion\n",
+    "    return tweets_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>emotion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Estoy feliz jeje</td>\n",
+       "      <td>alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>@karilinllanos Te amooo ❤️ \\nMereces ser siemp...</td>\n",
+       "      <td>alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Feliz cumpleaños CRACK 😚 deseo tu pronto regre...</td>\n",
+       "      <td>alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>No se equivoque, ya se entregaron las pruebas....</td>\n",
+       "      <td>alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Se feliz aunque te vengas miles de obstáculos ...</td>\n",
+       "      <td>alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>FELIZ CUMPLEAÑOS GOLEADOR @jeffersonduque9 htt...</td>\n",
+       "      <td>alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Estoy aprendiendo a mantenerme así… se vive má...</td>\n",
+       "      <td>alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>@EJasminC Hola Jasmin buenos días. Feliz Marte...</td>\n",
+       "      <td>alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>¡Preciosa @NaNaMejia17, bella, que toda tu dul...</td>\n",
+       "      <td>alegria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>Por medio de nuestro componente de aprovechami...</td>\n",
+       "      <td>alegria</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 text  emotion\n",
+       "0                                    Estoy feliz jeje  alegria\n",
+       "1   @karilinllanos Te amooo ❤️ \\nMereces ser siemp...  alegria\n",
+       "2   Feliz cumpleaños CRACK 😚 deseo tu pronto regre...  alegria\n",
+       "3   No se equivoque, ya se entregaron las pruebas....  alegria\n",
+       "4   Se feliz aunque te vengas miles de obstáculos ...  alegria\n",
+       "..                                                ...      ...\n",
+       "95  FELIZ CUMPLEAÑOS GOLEADOR @jeffersonduque9 htt...  alegria\n",
+       "96  Estoy aprendiendo a mantenerme así… se vive má...  alegria\n",
+       "97  @EJasminC Hola Jasmin buenos días. Feliz Marte...  alegria\n",
+       "98  ¡Preciosa @NaNaMejia17, bella, que toda tu dul...  alegria\n",
+       "99  Por medio de nuestro componente de aprovechami...  alegria\n",
+       "\n",
+       "[100 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alegria_list = ['feliz', 'alegre']\n",
+    "alegria_df = get_tweets('alegria', alegria_list, 100)\n",
+    "alegria_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#json_data = [r._json for r in searched_tweets]\n",
+    "\n",
+    "#df = pd.json_normalize(json_data)"
+   ]
   }
  ],
  "metadata": {
