--- a/Code/Tweets_emotions.ipynb
+++ b/Code/Tweets_emotions.ipynb
@@ -2,43 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tweepy\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os\n",
+    "import unidecode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "auth = tweepy.AppAuthHandler('EMmGcc8Is1eFkeQknQu9BQC0T', 'uTEU1RrYNl1k2gFomRVaP8AuTuTIAgoypX3Fn2WKxKQYTDOIoW')\n",
-    "api = tweepy.API(auth)"
+    "sel = pd.read_csv('../Data/SEL/SEL_full.txt', delimiter='\\t', encoding= 'ISO-8859-1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "places = api.search_geo(query=\"Colombia\", granularity=\"country\")\n",
-    "place_id = places[0].id"
+    "emociones = list(sel['Categoría'].unique())\n",
+    "emociones_dict ={}\n",
+    "for emocion in emociones:\n",
+    "    emociones_dict[emocion] = list(sel[sel['Categoría'] == emocion].sort_values(' PFA',  ascending=False).iloc[0:10]['Palabra'])\n",
+    "    for palabra in emociones_dict[emocion]:\n",
+    "        if not palabra.isascii():\n",
+    "            emociones_dict[emocion].append(unidecode.unidecode(palabra))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_tweets(emotion, words_list, number_tweets):\n",
-    "    emotion_words = '(' +' OR '.join(words) + ')'\n",
-    "    searched_tweets = [status.text for status in tweepy.Cursor(api.search_tweets, q= emotion_words + (\" place:%s\" % place_id) ).items(number_tweets)]\n",
+    "client = tweepy.Client(bearer_token = \"AAAAAAAAAAAAAAAAAAAAAKKEcwEAAAAA1VgzT5upnu%2B5POQ3dbdUx0%2B5vfA%3DdslAW6ut31gZhQD9SjNKJ4scCFd8bHgbevp8eGcJprbd2LTrGf\", wait_on_rate_limit = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_tweets(emotion, words_list, number_tweets, start, end):\n",
+    "    emotion_words = '(' +' OR '.join(words_list) + ')'\n",
+    "    searched_tweets = [tweet for tweet in tweepy.Paginator(client.search_all_tweets, query = emotion_words + ' place_country:CO' ,start_time = start, end_time = end, \n",
+    "                                max_results=500).flatten(limit=number_tweets)]\n",
     "    tweets_df = pd.DataFrame(searched_tweets, columns = ['text'])\n",
     "    tweets_df['emotion']= emotion\n",
     "    return tweets_df"
@@ -46,132 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "      <th>emotion</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Estoy feliz jeje</td>\n",
-       "      <td>alegria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>@karilinllanos Te amooo ❤️ \\nMereces ser siemp...</td>\n",
-       "      <td>alegria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Feliz cumpleaños CRACK 😚 deseo tu pronto regre...</td>\n",
-       "      <td>alegria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>No se equivoque, ya se entregaron las pruebas....</td>\n",
-       "      <td>alegria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Se feliz aunque te vengas miles de obstáculos ...</td>\n",
-       "      <td>alegria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>FELIZ CUMPLEAÑOS GOLEADOR @jeffersonduque9 htt...</td>\n",
-       "      <td>alegria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>Estoy aprendiendo a mantenerme así… se vive má...</td>\n",
-       "      <td>alegria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>@EJasminC Hola Jasmin buenos días. Feliz Marte...</td>\n",
-       "      <td>alegria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>¡Preciosa @NaNaMejia17, bella, que toda tu dul...</td>\n",
-       "      <td>alegria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>Por medio de nuestro componente de aprovechami...</td>\n",
-       "      <td>alegria</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 text  emotion\n",
-       "0                                    Estoy feliz jeje  alegria\n",
-       "1   @karilinllanos Te amooo ❤️ \\nMereces ser siemp...  alegria\n",
-       "2   Feliz cumpleaños CRACK 😚 deseo tu pronto regre...  alegria\n",
-       "3   No se equivoque, ya se entregaron las pruebas....  alegria\n",
-       "4   Se feliz aunque te vengas miles de obstáculos ...  alegria\n",
-       "..                                                ...      ...\n",
-       "95  FELIZ CUMPLEAÑOS GOLEADOR @jeffersonduque9 htt...  alegria\n",
-       "96  Estoy aprendiendo a mantenerme así… se vive má...  alegria\n",
-       "97  @EJasminC Hola Jasmin buenos días. Feliz Marte...  alegria\n",
-       "98  ¡Preciosa @NaNaMejia17, bella, que toda tu dul...  alegria\n",
-       "99  Por medio de nuestro componente de aprovechami...  alegria\n",
-       "\n",
-       "[100 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "alegria_list = ['feliz', 'alegre']\n",
-    "alegria_df = get_tweets('alegria', alegria_list, 100)\n",
-    "alegria_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#json_data = [r._json for r in searched_tweets]\n",
-    "\n",
-    "#df = pd.json_normalize(json_data)"
+    "start =  \"2021-03-29T11:59:59Z\"\n",
+    "end = \"2021-03-30T11:59:59Z\"\n",
+    "df_list = []\n",
+    "for i in emociones_dict.keys():\n",
+    "    print(i)\n",
+    "    df_list.append(get_tweets(i, emociones_dict[i], 10, start, end))\n",
+    "emociones_df = pd.concat(df_list)"
    ]
   }
  ],
