--- a/Document/report.tex
+++ b/Document/report.tex
@@ -35,6 +35,9 @@
 
 \usepackage{play}
 \usepackage{epsfig}
+\usepackage[position=t,singlelinecheck=off]{subfig}
+
+
 %\usepackage[grey,times]{quotchap}
 \usepackage[nottoc]{tocbibind}
 \renewcommand{\chaptermark}[1]{\markboth{#1}{}}
