--- a/Document/00_Intro Pages/01_Title.tex
+++ b/Document/00_Intro Pages/01_Title.tex
@@ -6,56 +6,44 @@
 
 \vspace*{-1cm}
 
-\textbf{\Large [PROJECT TITLE IN CAPITAL LETTERS]}\\[10pt]
+\textbf{\Large Aplicación de modelos de lenguaje para la identificación de emociones presentes en twitter durante el periodo de elecciones presidenciales en Colombia 2022}\\[10pt]
 
 \vspace*{0.5cm}
 
 
-A Project Report Submitted \\
-in Partial Fulfilment of the Requirements  \\
-for the Degree of  \\
-\vspace{5mm}
-{\Large \bf MASTER OF SCIENCE } \\
-in \\
-{\large \bf [Type School Name] } \\
+Tesis presentada para optar por el titulo de\\ 
+\vspace*{0.5cm}
+{\Large \bf Magister en Explotación de Datos y Descubrimiento del Conocimiento } \\
 
-% UNCOMMENT LINES 24-30 AND HIDE LINES 14-20 FOR MINOR PROJECT COVER PAGE
-% UNCOMMENT LINES 33-39 AND HIDE LINES 14-20 FOR PhD THESIS COVER PAGE
 
-% A Minor Project Report Submitted in Partial Fulfillment of the Requirements for \\
-%% \vspace{0.5cm}
-% {\Large \bf MINOR DEGREE}\\
-% \vspace{0.3cm}
-% in\\ 
-% \vspace{0.3cm}
-% {\large \bf [Type School Name] } \\
 
-% A thesis submitted for the degree of\\
-%% \vspace{0.5cm}
-% {\Large \bf DOCTOR OF PHILOSOPHY}\\
-% \vspace{0.3cm}
-% in\\ 
-% \vspace{0.3cm}
-% {\large \bf [Type School Name] } \\
+
 
                       \vspace{10mm}
-                   {\em  by} \\ \vspace{3mm}
-             {\large \bf [Type your full name]} \\
-{\large \bf (Roll No. [Type your roll no.])}\\[.3in]
+                   {\em  por} \\ \vspace{3mm}
+             {\large \bf Juan Jose Iguaran Fernandez} \\
 
-\vfill
+
+\vspace*{10mm}
 
 \begin{figure}[h]
   \begin{center}
-  \includegraphics[height=26mm]{Images & Logos/iiser_logo.png}
+  \subfloat{{\includegraphics[scale=0.55]{Images & Logos/data_mining.png} }}%
+  \subfloat{{\includegraphics[scale=0.18]{Images & Logos/uba.png}
+   }}
+  %
   \end{center}
 \end{figure}
-\vspace*{0.2cm}
 
-{\em\large to }\\%[8pt]
-{\bf\large SCHOOL OF [TYPE SCHOOL NAME]} \\%[4pt]
-{\bf\large INDIAN INSTITUTE OF SCIENCE EDUCATION AND RESEARCH}\\%[4pt]
-{\bf\large THIRUVANANTHAPURAM - 695 551, INDIA}\\%[8pt]
+\vspace*{10mm}
+
+
+{\bf\large Universidad de Buenos Aires} \\[10pt]
+{\bf\large Facultad de Ciencias Exactas y Naturales}\\%[4pt]
+
+
+
+{\bf\large Departamento de Ciencias de la Computación}\\%[8pt]
 {\it\large [Insert Month and Year]}
 
 \end{center}
