agrego las referencias

--- a/Document/report.tex
+++ b/Document/report.tex
@@ -102,8 +102,8 @@
 % 'the File Outline' box at the bottom left.
 
 \nocite{*}
-\bibliographystyle{plain}
-\bibliography{ref.bib}
+\bibliographystyle{apalike} % We choose the "plain" reference style
+\bibliography{ref}
 
 \end{document}
 
