--- a/Document/00_Intro Pages/05_Abstract.tex
+++ b/Document/00_Intro Pages/05_Abstract.tex
@@ -1,12 +1,12 @@
 % -------------------- Abstract page -----------------------%
 \begin{center}
-{\Large{\bf{ABSTRACT}}}
+{\Large{\bf{Resumen}}}
 \end{center}
 
 
-The main aim of the project ........
+El presente trabajo ........
 
 \vspace{4cm} % Reduce if text overflowing to a new page. Don't make it too long.
-\textbf{Keywords:} [Insert Keywords]
+\textbf{Palabras Clave:} [aquí van ]
 
 \clearpage
