--- a/Document/report.tex
+++ b/Document/report.tex
@@ -19,6 +19,8 @@
 
 \documentclass[12pt,a4wide]{report} % Set the font size (10pt, 11pt and 12pt) and paper size (letterpaper, a4paper, etc)
 
+\usepackage[spanish]{babel}
+
 \usepackage{amsthm,amssymb,mathrsfs,setspace,pstricks,booktabs,mathtools,amsmath,geometry}
 
 % UNCOMMENT REQUIRED PACKAGES
@@ -80,8 +82,7 @@
 % ALSO READ ALL UNCOMMENTED LINES CAREFULLY.
 
 \input{00_Intro Pages/01_Title}
-\input{00_Intro Pages/02_Declaration}
-\input{00_Intro Pages/03a_Certificate}
+
 % Switch from 03a_Certificate (line 81) to 03b_Certificate (line 84) for a fancier format.
 % You can disable geometry package if not switching and compile time is too long. 
 % \input{00_Intro Pages/03b_Certificate}
@@ -94,8 +95,10 @@
 
 % =========== Main chapters starts here =================== %
 
+
 \input{Chapters/chapter1}
 \input{Chapters/chapter2}
+\input{Chapters/chapter3}
 
 % You can either break down your chapter into multiple tex files
 % or keep in one file and quickly move between sections and subsections using
