--- a/Document/ref.bib
+++ b/Document/ref.bib
@@ -15,3 +15,37 @@
 	booktitle={Proceedings of the Seventh International Conference on Language Resources and Evaluation (LREC'10)},
 	year={2010}
 }
+
+@inproceedings{alm2005emotions,
+	title={Emotions from text: machine learning for text-based emotion prediction},
+	author={Alm, Cecilia Ovesdotter and Roth, Dan and Sproat, Richard},
+	booktitle={Proceedings of human language technology conference and conference on empirical methods in natural language processing},
+	pages={579--586},
+	year={2005}
+}
+
+@inproceedings{roberts2012empatweet,
+	title={Empatweet: Annotating and detecting emotions on twitter},
+	author={Roberts, Kirk and Roach, Michael A and Johnson, Joseph and Guthrie, Josh and Harabagiu, Sanda},
+	booktitle={Proceedings of the Eighth International Conference on Language Resources and Evaluation (LREC'12)},
+	pages={3806--3813},
+	year={2012}
+}
+
+@article{ekman1993facial,
+	title={Facial expression and emotion.},
+	author={Ekman, Paul},
+	journal={American psychologist},
+	volume={48},
+	number={4},
+	pages={384},
+	year={1993},
+	publisher={American Psychological Association}
+}
+
+@book{picard2000affective,
+	title={Affective computing},
+	author={Picard, Rosalind W},
+	year={2000},
+	publisher={MIT press}
+}
