--- a/Document/ref.bib
+++ b/Document/ref.bib
@@ -49,3 +49,79 @@
 	year={2000},
 	publisher={MIT press}
 }
+
+@article{hasan2014emotex,
+	title={Emotex: Detecting emotions in twitter messages},
+	author={Hasan, Maryam and Rundensteiner, Elke and Agu, Emmanuel},
+	year={2014},
+	publisher={Academy of Science and Engineering (ASE), USA,{\copyright} ASE 2014}
+}
+
+@article{go2009twitter,
+	title={Twitter sentiment classification using distant supervision},
+	author={Go, Alec and Bhayani, Richa and Huang, Lei},
+	journal={CS224N project report, Stanford},
+	volume={1},
+	number={12},
+	pages={2009},
+	year={2009}
+}
+
+@inproceedings{bollen2011modeling,
+	title={Modeling public mood and emotion: Twitter sentiment and socio-economic phenomena},
+	author={Bollen, Johan and Mao, Huina and Pepe, Alberto},
+	booktitle={Proceedings of the international AAAI conference on web and social media},
+	volume={5},
+	number={1},
+	pages={450--453},
+	year={2011}
+}
+
+@inproceedings{strapparava2008learning,
+	title={Learning to identify emotions in text},
+	author={Strapparava, Carlo and Mihalcea, Rada},
+	booktitle={Proceedings of the 2008 ACM symposium on Applied computing},
+	pages={1556--1560},
+	year={2008}
+}
+
+@inproceedings{strapparava2007semeval,
+	title={Semeval-2007 task 14: Affective text},
+	author={Strapparava, Carlo and Mihalcea, Rada},
+	booktitle={Proceedings of the Fourth International Workshop on Semantic Evaluations (SemEval-2007)},
+	pages={70--74},
+	year={2007}
+}
+
+@inproceedings{kouloumpis2011twitter,
+	title={Twitter sentiment analysis: The good the bad and the omg!},
+	author={Kouloumpis, Efthymios and Wilson, Theresa and Moore, Johanna},
+	booktitle={Proceedings of the international AAAI conference on web and social media},
+	volume={5},
+	number={1},
+	pages={538--541},
+	year={2011}
+}
+
+@article{pang2002thumbs,
+	title={Thumbs up? Sentiment classification using machine learning techniques},
+	author={Pang, Bo and Lee, Lillian and Vaithyanathan, Shivakumar},
+	journal={arXiv preprint cs/0205070},
+	year={2002}
+}
+
+@inproceedings{dave2003mining,
+	title={Mining the peanut gallery: Opinion extraction and semantic classification of product reviews},
+	author={Dave, Kushal and Lawrence, Steve and Pennock, David M},
+	booktitle={Proceedings of the 12th international conference on World Wide Web},
+	pages={519--528},
+	year={2003}
+}
+
+@inproceedings{wilson2005recognizing,
+	title={Recognizing contextual polarity in phrase-level sentiment analysis},
+	author={Wilson, Theresa and Wiebe, Janyce and Hoffmann, Paul},
+	booktitle={Proceedings of human language technology conference and conference on empirical methods in natural language processing},
+	pages={347--354},
+	year={2005}
+}
