--- a/Document/ref.bib
+++ b/Document/ref.bib
@@ -125,3 +125,99 @@
 	pages={347--354},
 	year={2005}
 }
+
+@inproceedings{wang2012harnessing,
+	title={Harnessing twitter" big data" for automatic emotion identification},
+	author={Wang, Wenbo and Chen, Lu and Thirunarayan, Krishnaprasad and Sheth, Amit P},
+	booktitle={2012 International Conference on Privacy, Security, Risk and Trust and 2012 International Confernece on Social Computing},
+	pages={587--592},
+	year={2012},
+	organization={IEEE}
+}
+
+
+
+@inproceedings{mohammad2012emotional,
+	title={\# Emotional tweets},
+	author={Mohammad, Saif},
+	booktitle={* SEM 2012: The First Joint Conference on Lexical and Computational Semantics--Volume 1: Proceedings of the main conference and the shared task, and Volume 2: Proceedings of the Sixth International Workshop on Semantic Evaluation (SemEval 2012)},
+	pages={246--255},
+	year={2012}
+}
+
+@inproceedings{aman2007identifying,
+	title={Identifying expressions of emotion in text},
+	author={Aman, Saima and Szpakowicz, Stan},
+	booktitle={International Conference on Text, Speech and Dialogue},
+	pages={196--205},
+	year={2007},
+	organization={Springer}
+}
+
+@inproceedings{tumasjan2010predicting,
+	title={Predicting elections with twitter: What 140 characters reveal about political sentiment},
+	author={Tumasjan, Andranik and Sprenger, Timm and Sandner, Philipp and Welpe, Isabell},
+	booktitle={Proceedings of the International AAAI Conference on Web and Social Media},
+	volume={4},
+	number={1},
+	pages={178--185},
+	year={2010}
+}
+
+@article{ortony1987referential,
+	title={The referential structure of the affective lexicon},
+	author={Ortony, Andrew and Clore, Gerald L and Foss, Mark A},
+	journal={Cognitive science},
+	volume={11},
+	number={3},
+	pages={341--364},
+	year={1987},
+	publisher={Wiley Online Library}
+}
+
+@inproceedings{strapparava2004wordnet,
+	title={Wordnet affect: an affective extension of wordnet.},
+	author={Strapparava, Carlo and Valitutti, Alessandro and others},
+	booktitle={Lrec},
+	volume={4},
+	number={1083-1086},
+	pages={40},
+	year={2004},
+	organization={Lisbon, Portugal}
+}
+
+@article{wiebe2005annotating,
+	title={Annotating expressions of opinions and emotions in language},
+	author={Wiebe, Janyce and Wilson, Theresa and Cardie, Claire},
+	journal={Language resources and evaluation},
+	volume={39},
+	number={2},
+	pages={165--210},
+	year={2005},
+	publisher={Springer}
+}
+
+@article{pang2004sentimental,
+	title={A sentimental education: Sentiment analysis using subjectivity summarization based on minimum cuts},
+	author={Pang, Bo and Lee, Lillian},
+	journal={arXiv preprint cs/0409058},
+	year={2004}
+}
+
+@inproceedings{esuli2006sentiwordnet,
+	title={Sentiwordnet: A publicly available lexical resource for opinion mining},
+	author={Esuli, Andrea and Sebastiani, Fabrizio},
+	booktitle={Proceedings of the Fifth International Conference on Language Resources and Evaluation (LREC’06)},
+	year={2006}
+}
+
+@article{wilson2009recognizing,
+	title={Recognizing contextual polarity: An exploration of features for phrase-level sentiment analysis},
+	author={Wilson, Theresa and Wiebe, Janyce and Hoffmann, Paul},
+	journal={Computational linguistics},
+	volume={35},
+	number={3},
+	pages={399--433},
+	year={2009},
+	publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
+}
