--- a/Document/ref.bib
+++ b/Document/ref.bib
@@ -221,3 +221,57 @@
 	year={2009},
 	publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
 }
+
+@inproceedings{read2005using,
+	title={Using emoticons to reduce dependency in machine learning techniques for sentiment classification},
+	author={Read, Jonathon},
+	booktitle={Proceedings of the ACL student research workshop},
+	pages={43--48},
+	year={2005}
+}
+
+@inproceedings{o2010tweets,
+	title={From tweets to polls: Linking text sentiment to public opinion time series},
+	author={O'Connor, Brendan and Balasubramanyan, Ramnath and Routledge, Bryan R and Smith, Noah A},
+	booktitle={Fourth international AAAI conference on weblogs and social media},
+	year={2010}
+}
+
+@inproceedings{barbosa2010robust,
+	title={Robust sentiment detection on twitter from biased and noisy data},
+	author={Barbosa, Luciano and Feng, Junlan},
+	booktitle={Coling 2010: Posters},
+	pages={36--44},
+	year={2010}
+}
+
+@inproceedings{davidov2010enhanced,
+	title={Enhanced sentiment learning using twitter hashtags and smileys},
+	author={Davidov, Dmitry and Tsur, Oren and Rappoport, Ari},
+	booktitle={Coling 2010: Posters},
+	pages={241--249},
+	year={2010}
+}
+
+@article{turney2002thumbs,
+	title={Thumbs up or thumbs down? Semantic orientation applied to unsupervised classification of reviews},
+	author={Turney, Peter D},
+	journal={arXiv preprint cs/0212032},
+	year={2002}
+}
+
+@inproceedings{liu2003model,
+	title={A model of textual affect sensing using real-world knowledge},
+	author={Liu, Hugo and Lieberman, Henry and Selker, Ted},
+	booktitle={Proceedings of the 8th international conference on Intelligent user interfaces},
+	pages={125--132},
+	year={2003}
+}
+
+@inproceedings{nasukawa2003sentiment,
+	title={Sentiment analysis: Capturing favorability using natural language processing},
+	author={Nasukawa, Tetsuya and Yi, Jeonghee},
+	booktitle={Proceedings of the 2nd international conference on Knowledge capture},
+	pages={70--77},
+	year={2003}
+}
