adding BERT bibliography

--- a/Document/ref.bib
+++ b/Document/ref.bib
@@ -275,3 +275,77 @@
 	pages={70--77},
 	year={2003}
 }
+
+@inproceedings{yu2003towards,
+	title={Towards answering opinion questions: Separating facts from opinions and identifying the polarity of opinion sentences},
+	author={Yu, Hong and Hatzivassiloglou, Vasileios},
+	booktitle={Proceedings of the 2003 conference on Empirical methods in natural language processing},
+	pages={129--136},
+	year={2003}
+}
+
+@article{wiebe1994tracking,
+	title={Tracking point of view in narrative},
+	author={Wiebe, Janyce M},
+	journal={arXiv preprint cmp-lg/9407019},
+	year={1994}
+}
+
+@inproceedings{hatzivassiloglou1997predicting,
+	title={Predicting the semantic orientation of adjectives},
+	author={Hatzivassiloglou, Vasileios and McKeown, Kathleen},
+	booktitle={35th annual meeting of the association for computational linguistics and 8th conference of the european chapter of the association for computational linguistics},
+	pages={174--181},
+	year={1997}
+}
+
+@inproceedings{kim2004determining,
+	title={Determining the sentiment of opinions},
+	author={Kim, Soo-Min and Hovy, Eduard},
+	booktitle={COLING 2004: Proceedings of the 20th International Conference on Computational Linguistics},
+	pages={1367--1373},
+	year={2004}
+}
+
+@article{acheampong2021transformer,
+	title={Transformer models for text-based emotion detection: a review of BERT-based approaches},
+	author={Acheampong, Francisca Adoma and Nunoo-Mensah, Henry and Chen, Wenyu},
+	journal={Artificial Intelligence Review},
+	volume={54},
+	number={8},
+	pages={5789--5829},
+	year={2021},
+	publisher={Springer}
+}
+
+@article{gonzalez2021twilbert,
+	title={TWilBert: Pre-trained deep bidirectional transformers for Spanish Twitter},
+	author={Gonzalez, Jose Angel and Hurtado, Llu{\'\i}s-F and Pla, Ferran},
+	journal={Neurocomputing},
+	volume={426},
+	pages={58--69},
+	year={2021},
+	publisher={Elsevier}
+}
+
+@article{vaswani2017attention,
+	title={Attention is all you need},
+	author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+	journal={Advances in neural information processing systems},
+	volume={30},
+	year={2017}
+}
+
+@article{devlin2018bert,
+	title={Bert: Pre-training of deep bidirectional transformers for language understanding},
+	author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+	journal={arXiv preprint arXiv:1810.04805},
+	year={2018}
+}
+
+@article{huang2019ana,
+	title={Ana at semeval-2019 task 3: Contextual emotion detection in conversations through hierarchical lstms and bert},
+	author={Huang, Chenyang and Trabelsi, Amine and Za{\"\i}ane, Osmar R},
+	journal={arXiv preprint arXiv:1904.00132},
+	year={2019}
+}
