--- a/Document/ref.bib
+++ b/Document/ref.bib
@@ -349,3 +349,58 @@
 	journal={arXiv preprint arXiv:1904.00132},
 	year={2019}
 }
+
+@article{canete2020spanish,
+	title={Spanish pre-trained bert model and evaluation data},
+	author={Canete, Jos{\'e} and Chaperon, Gabriel and Fuentes, Rodrigo and Ho, Jou-Hui and Kang, Hojin and P{\'e}rez, Jorge},
+	journal={Pml4dc at iclr},
+	volume={2020},
+	pages={1--10},
+	year={2020}
+}
+
+@article{hochreiter1997long,
+	title={Long short-term memory},
+	author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+	journal={Neural computation},
+	volume={9},
+	number={8},
+	pages={1735--1780},
+	year={1997},
+	publisher={MIT Press}
+}
+
+@article{chung2014empirical,
+	title={Empirical evaluation of gated recurrent neural networks on sequence modeling},
+	author={Chung, Junyoung and Gulcehre, Caglar and Cho, KyungHyun and Bengio, Yoshua},
+	journal={arXiv preprint arXiv:1412.3555},
+	year={2014}
+}
+
+@article{plaza2020improved,
+	title={Improved emotion recognition in Spanish social media through incorporation of lexical knowledge},
+	author={Plaza-del-Arco, Flor Miriam and Mart{\'\i}n-Valdivia, M Teresa and Ure{\~n}a-L{\'o}pez, L Alfonso and Mitkov, Ruslan},
+	journal={Future Generation Computer Systems},
+	volume={110},
+	pages={1000--1008},
+	year={2020},
+	publisher={Elsevier}
+}
+
+@inproceedings{sidorov2012empirical,
+	title={Empirical study of machine learning based approach for opinion mining in tweets},
+	author={Sidorov, Grigori and Miranda-Jim{\'e}nez, Sabino and Viveros-Jim{\'e}nez, Francisco and Gelbukh, Alexander and Castro-S{\'a}nchez, No{\'e} and Vel{\'a}squez, Francisco and D{\'\i}az-Rangel, Ismael and Su{\'a}rez-Guerra, Sergio and Trevino, Alejandro and Gordon, Juan},
+	booktitle={Mexican international conference on Artificial intelligence},
+	pages={1--14},
+	year={2012},
+	organization={Springer}
+}
+
+@inproceedings{gil2013combining,
+	title={Combining machine learning techniques and natural language processing to infer emotions using Spanish Twitter corpus},
+	author={Gil, Gonzalo Bl{\'a}zquez and Jes{\'u}s, Antonio Berlanga de and Lop{\'e}z, Jos{\'e} M Molina},
+	booktitle={International Conference on Practical Applications of Agents and Multi-Agent Systems},
+	pages={149--157},
+	year={2013},
+	organization={Springer}
+}
