--- a/Document/ref.bib
+++ b/Document/ref.bib
@@ -110,13 +110,7 @@
 	year={2002}
 }
 
-@inproceedings{dave2003mining,
-	title={Mining the peanut gallery: Opinion extraction and semantic classification of product reviews},
-	author={Dave, Kushal and Lawrence, Steve and Pennock, David M},
-	booktitle={Proceedings of the 12th international conference on World Wide Web},
-	pages={519--528},
-	year={2003}
-}
+
 
 @inproceedings{wilson2005recognizing,
 	title={Recognizing contextual polarity in phrase-level sentiment analysis},
@@ -165,7 +159,8 @@
 }
 
 @article{ortony1987referential,
-	title={The referential structure of the affective lexicon},
+	title={hatzivassiloglou1997predicting
+	},
 	author={Ortony, Andrew and Clore, Gerald L and Foss, Mark A},
 	journal={Cognitive science},
 	volume={11},
@@ -204,12 +199,7 @@
 	year={2004}
 }
 
-@inproceedings{esuli2006sentiwordnet,
-	title={Sentiwordnet: A publicly available lexical resource for opinion mining},
-	author={Esuli, Andrea and Sebastiani, Fabrizio},
-	booktitle={Proceedings of the Fifth International Conference on Language Resources and Evaluation (LREC’06)},
-	year={2006}
-}
+
 
 @article{wilson2009recognizing,
 	title={Recognizing contextual polarity: An exploration of features for phrase-level sentiment analysis},
@@ -268,13 +258,7 @@
 	year={2003}
 }
 
-@inproceedings{nasukawa2003sentiment,
-	title={Sentiment analysis: Capturing favorability using natural language processing},
-	author={Nasukawa, Tetsuya and Yi, Jeonghee},
-	booktitle={Proceedings of the 2nd international conference on Knowledge capture},
-	pages={70--77},
-	year={2003}
-}
+
 
 @inproceedings{yu2003towards,
 	title={Towards answering opinion questions: Separating facts from opinions and identifying the polarity of opinion sentences},
