comienzo marco teorico

--- a/Document/ref.bib
+++ b/Document/ref.bib
@@ -50,12 +50,7 @@
 	publisher={MIT press}
 }
 
-@article{hasan2014emotex,
-	title={Emotex: Detecting emotions in twitter messages},
-	author={Hasan, Maryam and Rundensteiner, Elke and Agu, Emmanuel},
-	year={2014},
-	publisher={Academy of Science and Engineering (ASE), USA,{\copyright} ASE 2014}
-}
+
 
 @article{go2009twitter,
 	title={Twitter sentiment classification using distant supervision},
@@ -77,21 +72,8 @@
 	year={2011}
 }
 
-@inproceedings{strapparava2008learning,
-	title={Learning to identify emotions in text},
-	author={Strapparava, Carlo and Mihalcea, Rada},
-	booktitle={Proceedings of the 2008 ACM symposium on Applied computing},
-	pages={1556--1560},
-	year={2008}
-}
 
-@inproceedings{strapparava2007semeval,
-	title={Semeval-2007 task 14: Affective text},
-	author={Strapparava, Carlo and Mihalcea, Rada},
-	booktitle={Proceedings of the Fourth International Workshop on Semantic Evaluations (SemEval-2007)},
-	pages={70--74},
-	year={2007}
-}
+
 
 @inproceedings{kouloumpis2011twitter,
 	title={Twitter sentiment analysis: The good the bad and the omg!},
@@ -112,13 +94,7 @@
 
 
 
-@inproceedings{wilson2005recognizing,
-	title={Recognizing contextual polarity in phrase-level sentiment analysis},
-	author={Wilson, Theresa and Wiebe, Janyce and Hoffmann, Paul},
-	booktitle={Proceedings of human language technology conference and conference on empirical methods in natural language processing},
-	pages={347--354},
-	year={2005}
-}
+
 
 @inproceedings{wang2012harnessing,
 	title={Harnessing twitter" big data" for automatic emotion identification},
@@ -192,32 +168,13 @@
 	publisher={Springer}
 }
 
-@article{pang2004sentimental,
-	title={A sentimental education: Sentiment analysis using subjectivity summarization based on minimum cuts},
-	author={Pang, Bo and Lee, Lillian},
-	journal={arXiv preprint cs/0409058},
-	year={2004}
-}
-
-
-
-@article{wilson2009recognizing,
-	title={Recognizing contextual polarity: An exploration of features for phrase-level sentiment analysis},
-	author={Wilson, Theresa and Wiebe, Janyce and Hoffmann, Paul},
-	journal={Computational linguistics},
-	volume={35},
-	number={3},
-	pages={399--433},
-	year={2009},
-	publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
-}
-
-@inproceedings{read2005using,
-	title={Using emoticons to reduce dependency in machine learning techniques for sentiment classification},
-	author={Read, Jonathon},
-	booktitle={Proceedings of the ACL student research workshop},
-	pages={43--48},
-	year={2005}
+@inproceedings{ceron2016sentiment,
+	title={A sentiment analysis system of Spanish tweets and its application in Colombia 2014 presidential election},
+	author={Cer{\'o}n-Guzm{\'a}n, Jhon Adri{\'a}n and Le{\'o}n-Guzm{\'a}n, Elizabeth},
+	booktitle={2016 IEEE international conferences on big data and cloud computing (BDCloud), social computing and networking (socialcom), sustainable computing and communications (sustaincom)(BDCloud-socialcom-sustaincom)},
+	pages={250--257},
+	year={2016},
+	organization={IEEE}
 }
 
 @inproceedings{o2010tweets,
@@ -227,13 +184,7 @@
 	year={2010}
 }
 
-@inproceedings{barbosa2010robust,
-	title={Robust sentiment detection on twitter from biased and noisy data},
-	author={Barbosa, Luciano and Feng, Junlan},
-	booktitle={Coling 2010: Posters},
-	pages={36--44},
-	year={2010}
-}
+
 
 @inproceedings{davidov2010enhanced,
 	title={Enhanced sentiment learning using twitter hashtags and smileys},
@@ -248,14 +199,6 @@
 	author={Turney, Peter D},
 	journal={arXiv preprint cs/0212032},
 	year={2002}
-}
-
-@inproceedings{liu2003model,
-	title={A model of textual affect sensing using real-world knowledge},
-	author={Liu, Hugo and Lieberman, Henry and Selker, Ted},
-	booktitle={Proceedings of the 8th international conference on Intelligent user interfaces},
-	pages={125--132},
-	year={2003}
 }
 
 
@@ -283,13 +226,7 @@
 	year={1997}
 }
 
-@inproceedings{kim2004determining,
-	title={Determining the sentiment of opinions},
-	author={Kim, Soo-Min and Hovy, Eduard},
-	booktitle={COLING 2004: Proceedings of the 20th International Conference on Computational Linguistics},
-	pages={1367--1373},
-	year={2004}
-}
+
 
 @article{acheampong2021transformer,
 	title={Transformer models for text-based emotion detection: a review of BERT-based approaches},
