--- a/Document/ref.bib
+++ b/Document/ref.bib
@@ -325,3 +325,14 @@
 	year={2013},
 	organization={Springer}
 }
+
+@article{miller1995wordnet,
+	title={WordNet: a lexical database for English},
+	author={Miller, George A},
+	journal={Communications of the ACM},
+	volume={38},
+	number={11},
+	pages={39--41},
+	year={1995},
+	publisher={ACM New York, NY, USA}
+}
