termino resumen de papers

--- a/Document/ref.bib
+++ b/Document/ref.bib
@@ -264,12 +264,6 @@
 	year={2018}
 }
 
-@article{huang2019ana,
-	title={Ana at semeval-2019 task 3: Contextual emotion detection in conversations through hierarchical lstms and bert},
-	author={Huang, Chenyang and Trabelsi, Amine and Za{\"\i}ane, Osmar R},
-	journal={arXiv preprint arXiv:1904.00132},
-	year={2019}
-}
 
 @article{canete2020spanish,
 	title={Spanish pre-trained bert model and evaluation data},
@@ -335,4 +329,12 @@
 	pages={39--41},
 	year={1995},
 	publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{mohammad2018semeval,
+	title={Semeval-2018 task 1: Affect in tweets},
+	author={Mohammad, Saif and Bravo-Marquez, Felipe and Salameh, Mohammad and Kiritchenko, Svetlana},
+	booktitle={Proceedings of the 12th international workshop on semantic evaluation},
+	pages={1--17},
+	year={2018}
 }
