termino marco teorico

--- a/Document/ref.bib
+++ b/Document/ref.bib
@@ -338,3 +338,13 @@
 	pages={1--17},
 	year={2018}
 }
+
+  @misc{ enwiki:1109264340,
+	author = "{Wikipedia contributors}",
+	title = "Recurrent neural network --- {Wikipedia}{,} The Free Encyclopedia",
+	year = "2022",
+	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Recurrent_neural_network&oldid=1109264340}",
+	note = "[Online; accessed 26-September-2022]"
+}
+
+`
