--- a/Document/report.tex
+++ b/Document/report.tex
@@ -23,6 +23,8 @@
 
 \usepackage{amsthm,amssymb,mathrsfs,setspace,pstricks,booktabs,mathtools,amsmath,geometry}
 
+\usepackage{url}
+
 % UNCOMMENT REQUIRED PACKAGES
 %
 % latexsym package contains few extra symbols.
